# SGH_non_classical_optimization_methods

./: .gitignore  README.md  bquxjob_379ac21_19e273f4940.csv  energy-charts_Öffentliche_Nettostromerzeugung_in_Polen_2025.csv  informacja o danych.docx  pyproject.toml  solar_base.csv
src/: analysis.ipynb  consolidate_data.py  data_utils.py  main.py  simulation.py
src/optimizers/: annealing.py
