[project]
name = "nmo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "meteostat>=2.1.4",
    "openmeteo-requests>=1.7.5",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "urllib3<2",
]
